Fix: Use 16:9 aspect ratio for blog posts and 2:3 for book covers

--- a/_sass/components/_post-card.scss
+++ b/_sass/components/_post-card.scss
@@ -12,6 +12,12 @@
   margin-bottom: double($base-spacing-unit) + half($base-spacing-unit);
   padding-bottom: (double($base-spacing-unit) + half($base-spacing-unit)) - half(quarter($base-spacing-unit));
 
+  &--blog {
+    .c-post-card__media {
+      aspect-ratio: 16 / 9;
+    }
+  }
+
   &__media {
     overflow: hidden;
     // background-color: $bg-gray;
